move from webpack to vite

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>MATF Slot Machine</title>
 </head>
 <body>
-    <script src="./dist/bundle.js" type="module"></script>
+    <script src="./src/app.js" type="module"></script>
 </body>
 </html>
